# gemini-model-router

./: .env.example  .gitignore  README.md  pyproject.toml
config/: anchors.yaml  router.yaml
docs/: cli.md  observability_design.md
docs/experiments/assets/: replay.csv
experiments/: REPORT.md  SLM_PLAN.md  judge.py  replay.py
experiments/figures/: render_frontier.py
experiments/results_hf_full/: report.json
experiments/results_judge/: raw.json  report.json
experiments/results_v2/: report.json  results.json
scripts/: replay.py
src/router/: cli.py  config_loader.py  config_writer.py  configcli.py  env.py  orchestrator.py  repl.py  session.py
src/router/backends/: base.py  claude_cli.py  gemini_cli.py  registry.py  vllm.py
src/router/classifier/: base.py  embed_anchors.py
src/router/configsite/: server.py
src/router/configsite/static/: index.html
src/router/eval/: review.py
src/router/features/: extractor.py
src/router/logging/: jsonl_writer.py
src/router/policy/: rules.py  scorer.py
src/router/sandbox/: workspace.py
tests/: test_cli_smoke.py  test_config_writer.py  test_env.py  test_features.py  test_jsonl_writer.py  test_repl_commands.py  test_scorer.py  test_session.py  test_workspace.py
tuning/: README.md  clusters.yaml  dataset_exporter.py  qlora_gemma4.py
